feat: Update admin dashboard with clean dark sidebar theme and improved layout
- Add ConditionalLayout to hide header/footer in admin routes
- Implement dark gradient sidebar (80% white, 15% black, 5% gradient)
- Fix button layouts: text first, then icon with proper inline display
- Add fixed height cards with custom black scrollbars
- Improve Faculty Overview spacing and department boxes layout
- Update all admin components with consistent spacing
- Add visual builder documentation and schemas

--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@sanity/image-url": "^1.2.0",
     "@sanity/ui": "^3.1.11",
     "@sanity/vision": "^4.13.0",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.77.0",
     "apexcharts": "^5.3.6",
     "bootstrap": "^5.3.8",
